# hiseq_dev

./: .gitignore  MANIFEST.in  README.md  hiseq.yml  pyproject.toml
docs/: todo.md
src/hiseq/: __init__.py  hiseq.py
src/hiseq/align/: align.py  align_args.py  align_index.py  align_r1.py  align_rn.py  align_rp.py  align_rx.py  bowtie.py  bowtie2.py  config.py  hisat2.py  salmon.py  star.py  utils.py
src/hiseq/atac/: atac.py  atac_args.py  atac_files.py  atac_qc.py  atac_r1.py  atac_rn.py  atac_rx.py  atac_utils.py  callpeak.py  utils.py
src/hiseq/bam2bw/: bam2bw.py  bam2bw_args.py  make_bw.py
src/hiseq/bam2cor/: bam2cor.py
src/hiseq/callpeak/: callpeak.py
src/hiseq/cnr/: callpeak.py  cnr.py  cnr_args.py  cnr_merge.py  cnr_r1.py  cnr_rd.py  cnr_rn.py  cnr_rp.py  cnr_rx.py  cnr_utils.py  cnr_v1.py  utils.py
src/hiseq/data/: config.yaml  genome.yaml  illumina_index.csv
src/hiseq/demx/: demx.py  demx2.py  demx_r1.py  sample_sheet.py
src/hiseq/download/: download.py  ossutil.py
src/hiseq/fragsize/: fragsize.py
src/hiseq/merge/: hiseq_merge.py
src/hiseq/qc/: base_content.py  fastqc.py  hiseq_p7.py  hiseq_p7a.py  hiseq_p7c.py  read_fastqc.py
src/hiseq/report/: hiseq_report.py
src/hiseq/rnaseq/: align_index.py  alignment.py  deseq_pair.py  parse_args.py  rnaseq.py  rnaseq_args.py  rnaseq_files.py  rnaseq_r1.py  rnaseq_rd.py  rnaseq_rn.py  rnaseq_rp.py  rnaseq_rx.py  rnaseq_salmon.py  rnaseq_v1.py  utils.py
src/hiseq/run_trackhub/: http_server.py  hub_url.py  run_trackhub.py  track_file.py  utils.py
src/hiseq/run_trackhub/src/: get_trackhub.py  make_trackhub.py
src/hiseq/sample/: sample.py
src/hiseq/smRNA/: piRNA.py  trim_smRNA.py
src/hiseq/trim/: cutadapt.py  trim.py  trim_r1.py  trim_rn.py
src/hiseq/utils/: bam.py  bed.py  bw.py  featurecounts.py  file.py  genome.py  hiseq_list.py  hiseq_utils.py  seq.py  tabix_utils.py  utils.py
