[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiseq"
version = "0.1.0"
authors = [
  { name="wm", email="wm@wm.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython >= 1.79",
    "crcmod == 1.7",
    "cutadapt == 4.6",
    "deeptools == 3.5.3",
    "ffq == 0.2.1",
    "htseq == 2.0.2",
    "numpy == 1.19.5",
    "openpyxl >= 3.0.10",
    "oss2 == 2.18.3",
    "pandas >= 1.2.0",
    "pybedtools == 0.9.0",
    "pybigwig == 0.3.18",
    "pyfastx == 0.8.4",
    "pysam == 0.19.1",
    "python-Levenshtein >= 0.12.2",
    "pyyaml == 6.0",
    "scikit-learn == 1.1.1",
    "scipy == 1.8.1",
    "toml == 0.10.2",
    "tos == 2.6.5",
    "trackhub == 0.2.4",
]
# INSTALL
# # 1. create conda env 'hiseq'
# $ conda env create -f hiseq.yml
# $ conda activate hiseq
# # 2. install hiseq
# $ cd /data/biosoft/hiseq_dev/
# $ pip install .
#
## Salmon
## Install salmon manually

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
hiseq = "hiseq.hiseq:main"


